tests/paczka1/small_fuzzy/44054418.err
Error in line 2: Ud6nuG08xp S249 64,7
Error in line 11: 3Wyfp A878 111,7
Error in line 15: CggWL9 A125 -3,7
